<resources>
    <string name="app_name">Ingatin</string>
    <string-array name="reminder_options">
        <item>1 Jam Sebelumnya</item>
        <item>1 Hari Sebelumnya</item>
        <item>2 Hari Sebelumnya</item>
    </string-array>

    <string name="welcome_dashboard">Selamat Datang!</string>
    <string name="jadwal_hari_ini">Jadwal Hari Ini</string>
    <string name="tugas_mendatang">Tugas Mendatang</string>
    <string name="lihat_semua_jadwal">Lihat Semua Jadwal</string>
    <string name="tidak_ada_jadwal_hari_ini">Hore! Tidak ada jadwal hari ini. Waktunya bersantai!</string>
    <string name="tidak_ada_tugas_mendatang">Luar biasa! Tidak ada tugas yang akan datang. Tetap produktif!</string>

    <string-array name="motivational_quotes">
        <item>"Pendidikan adalah senjata paling ampuh yang bisa kamu gunakan untuk mengubah dunia." - Nelson Mandela</item>
        <item>"Satu-satunya cara untuk melakukan pekerjaan hebat adalah dengan mencintai apa yang kamu lakukan." - Steve Jobs</item>
        <item>"Jangan berhenti ketika lelah. Berhentilah ketika selesai."</item>
        <item>"Masa depan adalah milik mereka yang menyiapkan hari ini." - Malcolm X</item>
        <item>"Sedikit kemajuan setiap hari akan menghasilkan hasil yang besar."</item>
        <item>"Kunci kesuksesan adalah fokus pada tujuan, bukan pada rintangan."</item>
        <item>"Percayalah pada dirimu sendiri, bahkan ketika tidak ada orang lain yang melakukannya."</item>
    </string-array>

    <string name="deadline_format">Deadline: %1$s</string>
    <string name="countdown_format_days">Tersisa %1$d hari lagi!</string>
    <string name="countdown_format_hours">Tersisa %1$d jam lagi!</string>
    <string name="countdown_format_overdue">Telah melewati batas waktu!</string>


    <string-array name="hari_array">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>
    <string name="jadwal_dan_tugas">Jadwal &amp; Tugas</string>
    <string name="badge_yang_diraih">Badge yang Diraih:</string>
    <string name="level_format">Level %1$d</string>
    <string name="points_format">%1$d Poin</string>
    <string name="no_badge">Belum ada badge</string>
    <string name="weekly_analysis">Selamat hari Senin! Minggu lalu kamu berhasil menyelesaikan **%1$d tugas**. Pertahankan semangatmu minggu ini!</string>
    <string name="weekly_analysis_empty">Selamat hari Senin! Awali minggu dengan semangat baru untuk menjadi lebih produktif!</string>
    <string name="study_recommendation">Ada waktu luang **%1$s** mulai pukul **%2$s**. Waktu yang pas untuk mencicil tugas **%3$s**!</string>
    <string name="fokus_hari_ini">Fokus Hari Ini</string>
    <string name="analisis_mingguan">Analisis Mingguan</string>
    <string name="rekomendasi_belajar">Rekomendasi Belajar</string>
    <string name="level_dan_poin_pengguna">Level dan Poin Pengguna</string>
    <string name="tidak_ada_jadwal_hari_ini_dashboard">Tidak ada jadwal hari ini.</string>
    <string name="badge_earned">Badge Baru Diraih: %1$s</string>
</resources>